# CLionProjects

./: .gitignore  README.md
TestCode/: CMakeLists.txt
TestCode/Test2/: CMakeLists.txt  main.cpp
TestCode/Test3/: CMakeLists.txt  Fiblib.cpp  Fiblib.hpp  main.cpp
TestCode/Test3/Fiblib/: CMakeLists.txt  Fiblib.cpp  Fiblib.hpp
TestCode/Test3/VectOut/: VectOut.cpp  VectOut.hpp
Testing/Test1/: CMakeLists.txt  main.cpp
Week1/: CMakeLists.txt
Week1/Homework1/: main.cpp
Week1/Homework2/: main.cpp
Week1/Homework3/: CMakeLists.txt  main.cpp
Week1/Program1/: CMakeLists.txt
Week1/Program2/: CMakeLists.txt  main.cpp
Week1/Program3/: CMakeLists.txt  main.cpp
Week2/: CMakeLists.txt
Week2/Fizzbuzz1/: CMakeLists.txt  main.cpp
Week2/Fizzbuzz2/: CMakeLists.txt  main.cpp
Week2/Fizzbuzz3/: CMakeLists.txt  main.cpp
Week2/Homework1/: main.cpp
Week2/Homework2/: CMakeLists.txt  main.cpp
Week2/Homework3/: main.cpp
Week2/Homework4/: CMakeLists.txt
Week2/Homework4/Fiblib/: CMakeLists.txt
Week2/Homework4/VectOut/: CMakeLists.txt
Week3/Homework1/: CMakeLists.txt  main.cpp  multiline.cpp  multiline.hpp  point.cpp  point.hpp
Week3/Homework1A/: CMakeLists.txt  main.cpp  multiline.cpp  multiline.hpp  point.hpp
